[package]
name = "jzon"
description = "Continuation of json-rust, a JSON implementation in Rust"
authors = [
    "Sandro-Alessio Gierens <sandro@gierens.de>",
    "Maciej Hirsz <hello@maciej.codes>"
    ]
documentation = "https://docs.rs/jzon/"
repository = "https://github.com/rustadopt/jzon-rs"
version = "0.12.5"
license = "MIT/Apache-2.0"
edition = "2018"
