[package]
name = "jzon"
description = "Continuation of json-rust, a JSON implementation in Rust"
authors = [
    "Sandro-Alessio Gierens <sandro@gierens.de>",
    "Maciej Hirsz <hello@maciej.codes>"
    ]
documentation = "https://docs.rs/jzon/"
repository = "https://github.com/rustadopt/jzon-rs"
version = "0.12.5"
license = "MIT/Apache-2.0"
edition = "2018"

[dev-dependencies]
debugger_test = "0.1.0"
debugger_test_parser = "0.1.0"

[features]
# UNSTABLE FEATURES (requires Rust nightly)
# Enable to use the #[debugger_visualizer] attribute.
debugger_visualizer = []

[[test]]
path = "tests/debugger_visualizer.rs"
name = "debugger_visualizer"
required-features = ["debugger_visualizer"]
